fix(update-modify): Fix 035 being split on update when same $a in incoming and existing (#747)
* Upgrade data-import-processing-core to 6.0.0-SNAPSHOT
* Move 035 normalization logic to data-import-processing-core

Closes: MODSOURCE-1014